- fix expressions and sheld z-index - imperfect fix to PC waifu mode expression holder positioning

--- a/public/scripts/extensions/expressions/style.css
+++ b/public/scripts/extensions/expressions/style.css
@@ -14,7 +14,7 @@
     bottom: 1px;
     padding: 0;
     filter: drop-shadow(2px 2px 2px #51515199);
-    z-index: 1;
+    z-index: 2;
     overflow: hidden;
 
 }
