--- a/public/style.css
+++ b/public/style.css
@@ -206,7 +206,7 @@ code {
     left: calc((100svw - var(--sheldWidth))/2);
     top: 41px;
     /* margin: 0 auto; */
-    z-index: 2;
+    z-index: 3;
     /* resize: both; */
     min-height: 100px;
     min-width: 100px;
@@ -3320,11 +3320,12 @@ body.waifuMode .expression-holder {
     max-width: 90vw;
     height: 90vh;
     width: fit-content;
-    position: unset;
+    /* position: unset; */
+    left: calc((100vw - var(--sheldWidth))/2);
     margin: 0 auto;
     bottom: 0;
     filter: drop-shadow(2px 2px 2px #51515199);
-    z-index: 1;
+    z-index: 2;
     /* resize: both; */
 }
 
